--- a/package.json
+++ b/package.json
@@ -6,25 +6,27 @@
     "start": "server.js"
   },
   "dependencies": {
-    "bcrypt-nodejs": "~0.0.3",
-    "express": "~4.8.5",
-    "body-parser": "~1.0.0",
-    "connect-flash": "~0.1.1",
-    "cookie-parser": "~1.0.0",
-    "express-session": "~1.0.0",
-    "jade": "~1.5.0",
-    "method-override": "~1.0.0",
-    "morgan": "~1.0.0",
-    "mongoose": "~3.8.15",
-    "oauth2orize": "~1.0.0",
-    "passport": "~0.2.0",
-    "passport-http": "~0.2.2",
-    "passport-http-bearer": "~1.0.1",
-    "passport-local": "~1.0.0",
-    "passport-oauth2-client-password": "~0.1.1"
+    "bcrypt-nodejs": "0.0.3",
+    "express": "4.10.1",
+    "body-parser": "1.9.2",
+    "connect-flash": "0.1.1",
+    "cookie-parser": "1.3.3",
+    "express-session": "1.9.1",
+    "jade": "1.7.0",
+    "json-tpl": "0.0.2",
+    "method-override": "2.3.0",
+    "morgan": "1.4.1",
+    "mongoose": "3.8.18",
+    "oauth2orize": "1.0.1",
+    "passport": "0.2.1",
+    "passport-http": "0.2.2",
+    "passport-http-bearer": "1.0.1",
+    "passport-local": "1.0.0",
+    "passport-oauth2-client-password": "0.1.2"
   },
   "devDependencies": {
-    "gulp": "^3.8.7",
-    "gulp-nodemon": "^1.0.4"
+    "gulp": "3.8.7",
+    "gulp-nodemon": "1.0.4",
+    "mocha": "2.0.1"
   }
 }
