--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "gulp": "3.8.7",
     "gulp-nodemon": "1.0.4",
-    "mocha": "2.0.1"
+    "mocha": "2.0.1",
+    "supertest": "0.15.0"
   }
 }
