--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "server.js"
+    "start": "server.js",
+    "test": "test/test.sh"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -13,7 +14,6 @@
     "cookie-parser": "1.3.3",
     "express-session": "1.9.1",
     "jade": "1.7.0",
-    "json-tpl": "0.0.3",
     "method-override": "2.3.0",
     "morgan": "1.4.1",
     "mongoose": "3.8.18",
@@ -22,12 +22,17 @@
     "passport-http": "0.2.2",
     "passport-http-bearer": "1.0.1",
     "passport-local": "1.0.0",
-    "passport-oauth2-client-password": "0.1.2"
+    "passport-oauth2-client-password": "0.1.2",
+    "templo": "0.6.0",
+    "underscore": "1.7.0"
   },
   "devDependencies": {
+    "async": "0.9.0",
+    "chai": "1.10.0",
     "gulp": "3.8.7",
     "gulp-nodemon": "1.0.4",
     "mocha": "2.0.1",
+    "mongodb": "2.0.15",
     "supertest": "0.15.0"
   }
 }
