--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "body-parser": "1.9.2",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.3.3",
+    "csurf": "1.6.6",
     "express-session": "1.9.1",
     "jade": "1.7.0",
     "method-override": "2.3.0",
-    "morgan": "1.4.1",
+    "moment": "2.9.0",
     "mongoose": "3.8.18",
+    "morgan": "1.4.1",
     "oauth2orize": "1.0.1",
     "passport": "0.2.1",
     "passport-http": "0.2.2",
@@ -33,10 +35,11 @@
   "devDependencies": {
     "async": "0.9.0",
     "chai": "1.10.0",
-    "gulp": "3.8.7",
-    "gulp-nodemon": "1.0.4",
+    "gulp": "3.8.11",
+    "gulp-nodemon": "1.0.5",
     "mocha": "2.0.1",
     "mongodb": "2.0.15",
+    "superagent": "0.21.0",
     "supertest": "0.15.0",
     "walk": "2.3.9"
   }
