--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "test/test.js"
   },
   "dependencies": {
+    "aws-sdk": "2.1.12",
     "bcrypt-nodejs": "0.0.3",
     "express": "4.10.1",
     "body-parser": "1.9.2",
@@ -20,6 +21,7 @@
     "express-session": "1.9.1",
     "jade": "1.7.0",
     "method-override": "2.3.0",
+    "mime-types": "2.0.9",
     "moment": "2.9.0",
     "mongoose": "3.8.18",
     "morgan": "1.4.1",
