--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "passport-local": "1.0.0",
     "passport-oauth2-client-password": "0.1.2",
     "templo": "0.6.0",
-    "underscore": "1.7.0"
+    "underscore": "1.7.0",
+    "underscore.string": "3.0.3"
   },
   "devDependencies": {
     "async": "0.9.0",
