--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "cookie-parser": "1.3.3",
     "csurf": "1.6.6",
     "express-session": "1.9.1",
+    "i18next": "1.7.10",
+    "is_js": "0.7.3",
     "jade": "1.7.0",
     "method-override": "2.3.0",
     "mime-types": "2.0.9",
